--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "craftcms/cms": "^3.0.0",
     "vlucas/phpdotenv": "^2.4.0",
     "craftcms/redactor": "2.1.6",
-    "craftcms/element-api": "2.5.4"
+    "craftcms/element-api": "2.5.4",
+    "ether/simplemap": "v3.3.4"
   },
   "autoload": {
     "psr-4": {
