--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
+    "gulp-clean-css": "^4.0.0",
     "gulp-vueify": "0.0.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
